@@ -4,6 +4,7 @@ import com.udacity.jdnd.course3.critter.pet.entities.Pet;
 import org.springframework.beans.BeanUtils;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class CustomerMapper {
     public static Customer convertCustomerDTOToCustomer(CustomerDTO customerDTO) {
@@ -14,12 +15,12 @@ public class CustomerMapper {
     public static CustomerDTO convertCustomerToCustomerDTO(Customer customer) {
         CustomerDTO customerDTO = new CustomerDTO();
         List<Pet> pets = customer.getPets();
-        List<Long> petIds = pets.stream().map(pet -> pet.getId()).toList();
+        List<Long> petIds = pets.stream().map(pet -> pet.getId()).collect(Collectors.toList());
         BeanUtils.copyProperties(customer, customerDTO);
         customerDTO.setPetIds(petIds);
         return customerDTO;
     }
     public static List<CustomerDTO> convertCustomerToCustomerDTO(List<Customer> customers) {
-        return customers.stream().map(CustomerMapper::convertCustomerToCustomerDTO).toList();
+        return customers.stream().map(CustomerMapper::convertCustomerToCustomerDTO).collect(Collectors.toList());
     }
 }
